Fixed issues with z-indexes of floating items and dropdown chevron.

--- a/src/components/advanced-input/styles.module.sass
+++ b/src/components/advanced-input/styles.module.sass
@@ -16,7 +16,7 @@
     border-radius: 15px
     padding: 1em
     position: absolute
-    z-index: 1
+    z-index: 10
     top: calc(100% + 10px)
     left: 0
     min-width: 100px
