--- a/src/components/configuration/color-picker/styles.module.sass
+++ b/src/components/configuration/color-picker/styles.module.sass
@@ -6,7 +6,7 @@
   .pickerContainer
     outline: none
     max-width: 200px
-    z-index: 1
+    z-index: 10
     position: absolute
     background: var(--card-color)
     padding: 1em
